# esp-libs

esp-light-algorithms/: CMakeLists.txt
esp-light-algorithms/src/: LedChannelManager.cpp  support.h
esp-mdm/: CMakeLists.txt  Kconfig  idf_component.yml  sdkconfig.defaults
esp-mdm/src/: ApplicationBase.cpp  CoreDumpUploader.cpp  CoreDumpUploader.h  LogManager.cpp  MDMConfiguration.cpp  MDMManager.cpp  OTAManager.cpp  OTAManager.h  support.cpp  support.h
esp-mqtt-support/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  sdkconfig.defaults
esp-mqtt-support/src/: MQTTConnection.cpp  MQTTSupport.cpp  support.h
esp-network-support/: CMakeLists.txt  Kconfig  idf_component.yml  sdkconfig.defaults
esp-network-support/src/: LogManager.cpp  NVSProperty.cpp  NetworkConfiguration.cpp  NetworkConnection.cpp  OTAManager.cpp  http_support.cpp  support.cpp  support.h
esp-network-support/src/include/: LogManager.h  NVSProperty.h  NetworkConfiguration.h  NetworkConnection.h  OTAManager.h  http_support.h
esp-sensor-support/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
esp-sensor-support/src/: ACS725.cpp  ACS725Calibration.cpp  DFRobot_GestureFaceDetection.cpp  (+5 more)
esp-status-led-support/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
esp-support/: CMakeLists.txt
esp-support/cmake/: pad.py  raw_partition.cmake
esp-support/src/: .clang-format  Bounce2.cpp  Mutex.cpp  NVSProperty.cpp  Queue.cpp  strformat.cpp
esp-support/src/include/: Bounce2.h  Callback.h  Defer.h  Mutex.h  Queue.h  Signal.h  Span.h  cJSONSupport.h  defer.h  error.h  strformat.h
(+31 files in other folders)
